@@ -22,7 +22,7 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-from __future__ import print_function
+from __future__ import print_function, unicode_literals
 
 """interactive.py: RiveScript's built-in interactive mode.
 
